[tool.poetry]
name = "dz-13"
version = "0.1.0"
description = ""
authors = ["Ivan Tomilin <i.tomilin.91@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyproject-toml = "^0.0.10"



[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
